(lang dune 3.20)

(name berkeley-cs164-arm-darwin)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Qiu Xuanluo <owobit@foxmail.com>")

(maintainers "Qiu Xuanluo <owobit@foxmail.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name berkeley-cs164-arm-darwin)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
